--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 //= template/header.html
 
 <header class="header">
-
+  <div class="header__wrapper">
+    <a href="#" class="logo">
+      <img src="img/logo.svg" alt="artBioTech">
+      <p>artBioTech</p>
+    </a>
+    <button class="menu__btn"></button>
+    <nav class="menu">
+      <ul class="menu__list">
+        <li class="menu__item active"><a href="#">ArtBioTech</a></li>
+        <li class="menu__item"><a href="#">Production</a></li>
+        <li class="menu__item"><a href="#">Why us</a></li>
+        <li class="menu__item"><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
 </header>
 
 <main>
-
+  <div class="promo">
+    <div class="promo__wrapper">
+      <h1 class="promo__title">the World of SmArt PCR Reagents</h1>
+      <p class="promo__descr">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
+    </div>
+  </div>
 </main>
 
 <footer class="footer">
