--- a/index.html
+++ b/index.html
@@ -25,6 +25,79 @@
       <p class="promo__descr">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
     </div>
   </div>
+
+  <section class="products">
+    <div class="products__wrapper">
+      <h2 class="products__title">SmArt Products for your PCR</h2>
+      <div class="products__items">
+        <div class="products__items_wrapper">
+          <div class="products__item">
+            <img src="img/screen2_item1.svg" alt="" class="products__item_img">
+            <div class="products__content">
+              <h3 class="products__item_title">Taq</h3>
+              <p class="products__item_descr">only Taq, nothing needed</p>
+            </div>
+          </div>
+          <div class="products__item">
+            <img src="img/screen2_item2.svg" alt="" class="products__item_img">
+            <div class="products__content">
+              <h3 class="products__item_title">HotTaq</h3>
+              <p class="products__item_descr">activation at 39 or 55 оС</p>
+            </div>
+          </div>
+          <div class="products__item">
+            <img src="img/screen2_item3.svg" alt="" class="products__item_img">
+            <div class="products__content">
+              <h3 class="products__item_title">MMLV</h3>
+              <p class="products__item_descr">RNAse Н- active at 52 оС</p>
+            </div>
+          </div>
+          <div class="products__item">
+            <img src="img/screen2_item4.svg" alt="" class="products__item_img">
+            <div class="products__content">
+              <h3 class="products__item_title">WarmMMLV</h3>
+              <p class="products__item_descr">activation at 40 оС</p>
+            </div>
+          </div>
+          <div class="products__item">
+            <img src="img/screen2_item5.svg" alt="" class="products__item_img">
+            <div class="products__content">
+              <h3 class="products__item_title">dNTPs</h3>
+              <p class="products__item_descr">biosynthetic, <br> do not contain PCR inhibitors</p>
+            </div>
+          </div>
+          <div class="products__item">
+            <img src="img/screen2_item6.svg" alt="" class="products__item_img">
+            <div class="products__content">
+              <h3 class="products__item_title">Uracil-DNA glycosylase</h3>
+              <p class="products__item_descr">RNAse Н-, active at 52 оС</p>
+            </div>
+          </div>
+          <div class="products__item">
+            <img src="img/screen2_item7.svg" alt="" class="products__item_img">
+            <div class="products__content">
+              <h3 class="products__item_title">PCR mixes</h3>
+              <p class="products__item_descr">sensitive (up to 5 copy); any applications: TaqMan, Sybr Green, routine, long, direct, HF; additives: UNG/UTP, ROX</p>
+            </div>
+          </div>
+          <div class="products__item">
+            <img src="img/screen2_item8.svg" alt="" class="products__item_img">
+            <div class="products__content">
+              <h3 class="products__item_title">Proteinase K</h3>
+              <p class="products__item_descr">high purity and activity</p>
+            </div>
+          </div>
+          <div class="products__item">
+            <img src="img/screen2_item9.svg" alt="" class="products__item_img">
+            <div class="products__content">
+              <h3 class="products__item_title">One step RT-PCR mixes</h3>
+              <p class="products__item_descr">sensitive (up to 5 copy); any applications: TaqMan, Sybr Green, routine, long, HF</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 
 <footer class="footer">
