--- a/index.html
+++ b/index.html
@@ -2,31 +2,31 @@
 
 <header class="header">
   <div class="header__wrapper">
-    <a href="#" class="logo">
+    <a href="/" class="logo">
       <img src="img/logo.svg" alt="artBioTech">
       <p>artBioTech</p>
     </a>
     <button class="menu__btn"></button>
     <nav class="menu">
       <ul class="menu__list">
-        <li class="menu__item active"><a href="#">ArtBioTech</a></li>
-        <li class="menu__item"><a href="#">Production</a></li>
-        <li class="menu__item"><a href="#">Why us</a></li>
+        <li class="menu__item active"><a href="#promo">ArtBioTech</a></li>
+        <li class="menu__item"><a href="#products">Production</a></li>
+        <li class="menu__item"><a href="#features">Why us</a></li>
         <li class="menu__item"><a href="#">Contact</a></li>
       </ul>
     </nav>
   </div>
 </header>
 
-<main>
-  <div class="promo">
+<main class="main">
+  <section class="promo" id="promo">
     <div class="promo__wrapper">
       <h1 class="promo__title">the World of SmArt PCR Reagents</h1>
       <p class="promo__descr">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
     </div>
-  </div>
+  </section>
 
-  <section class="products">
+  <section class="products" id="products">
     <div class="products__wrapper">
       <h2 class="products__title">SmArt Products for your PCR</h2>
       <div class="products__items">
@@ -96,6 +96,18 @@
           </div>
         </div>
       </div>
+    </div>
+  </section>
+
+  <section class="features" id="features">
+    <div class="features__wrapper">
+      <h2 class="products__title  products__title--left">ArtBioTech’s benefits</h2>
+      <ul class="features__list">
+        <li class="features__item">Any volume (from μl to L and more)</li>
+        <li class="features__item">Individual solutions</li>
+        <li class="features__item">OEM</li>
+        <li class="features__item">SmArt price</li>
+      </ul>
     </div>
   </section>
 </main>
