--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <button class="menu__btn"></button>
     <nav class="menu">
       <ul class="menu__list">
-        <li class="menu__item active"><a href="#promo">ArtBioTech</a></li>
-        <li class="menu__item"><a href="#products">Production</a></li>
-        <li class="menu__item"><a href="#features">Why us</a></li>
-        <li class="menu__item"><a href="#contact">Contact</a></li>
+        <li data-link="promo" class="menu__item active"><a href="#promo">ArtBioTech</a></li>
+        <li data-link="products" class="menu__item"><a href="#products">Production</a></li>
+        <li data-link="features" class="menu__item"><a href="#features">Why us</a></li>
+        <li data-link="contact" class="menu__item"><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </div>
 </header>
 
 <main class="main">
-  <section class="promo" id="promo">
+  <section class="promo active" id="promo">
     <div class="promo__wrapper">
       <h1 class="promo__title">the World of SmArt PCR Reagents</h1>
       <p class="promo__descr">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
