--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 <main class="main">
   <section class="promo active" id="promo">
     <div class="promo__wrapper">
-      <h1 class="promo__title">the World of SmArt PCR Reagents</h1>
-      <p class="promo__descr">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
+      <h1 class="promo__title wow zoomIn">the World of SmArt PCR Reagents</h1>
+      <p class="promo__descr wow flipInX">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
     </div>
   </section>
 
   <section class="products" id="products">
     <div class="products__wrapper">
-      <h2 class="products__title">SmArt Products for your PCR</h2>
+      <h2 class="products__title wow rotateInDownLeft">SmArt Products for your PCR</h2>
       <div class="products__items">
-        <div class="products__items_wrapper">
+        <div class="products__items_wrapper wow slideInUp">
           <div class="products__item">
             <img src="img/screen2_item1.svg" alt="" class="products__item_img">
             <div class="products__content">
@@ -299,28 +299,28 @@
 
   <section class="features" id="features">
     <div class="features__wrapper">
-      <h2 class="products__title  products__title--left">ArtBioTech’s benefits</h2>
+      <h2 class="products__title  products__title--left wow bounceInDown">ArtBioTech’s benefits</h2>
       <ul class="features__list">
-        <li class="features__item">Any volume (from μl to L and more)</li>
-        <li class="features__item">Individual solutions</li>
-        <li class="features__item">OEM</li>
-        <li class="features__item">SmArt price</li>
+        <li class="features__item wow bounceInLeft">Any volume (from μl to L and more)</li>
+        <li class="features__item wow bounceInLeft" data-wow-delay="0.2s">Individual solutions</li>
+        <li class="features__item wow bounceInLeft" data-wow-delay="0.4s">OEM</li>
+        <li class="features__item wow bounceInLeft" data-wow-delay="0.6s">SmArt price</li>
       </ul>
     </div>
   </section>
 
   <section class="contact" id="contact">
     <div class="contact__wrapper">
-      <h2 class="products__title  products__title--left">Contact Us:</h2>
-      <p class="contact__descr">The ArtBioTech team is always available to assist you and help you optimize your PCR. Please contact us with any questions or feedback.</p>
-      <form action="#">
+      <h2 class="products__title  products__title--left wow bounceInDown">Contact Us:</h2>
+      <p class="contact__descr wow bounceInDown">The ArtBioTech team is always available to assist you and help you optimize your PCR. Please contact us with any questions or feedback.</p>
+      <form action="#" class="wow bounceInRight">
         <input type="text" placeholder="Your Name">
         <input type="text" placeholder="Your Email">
         <textarea name="a" id="as" cols="30" rows="10" placeholder="Your message"></textarea>
         <input type="submit" value="Send">
       </form>
     </div>
-    <footer class="footer">
+    <footer class="footer wow bounceInUp">
       <div class="footer__wrapper">
         <div class="footer__block">
           <div class="footer__phone">
